[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameHUDRelated/TowerIconCollectionPanel/TowerIconCollectionPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationWholeScreenPanel/CombinationWholeScreenPanel.gd" type="Script" id=3]
[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationWholeScreenPanel/CombinationTierSelectionPanel/TierHSelectionPanel.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 2 )

[node name="CombinationWholeScreenPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 60
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 60.0
margin_right = 616.0
margin_bottom = 303.0
mouse_filter = 2
custom_constants/separation = 6

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_left = 182.0
margin_right = 434.0
margin_bottom = 27.0
size_flags_horizontal = 6
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Combination Effect"

[node name="Spacer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 616.0
margin_bottom = 38.0
mouse_filter = 2
custom_constants/margin_top = 5

[node name="TowerAmountForCombiDescLabel" type="Label" parent="VBoxContainer"]
margin_left = 112.0
margin_top = 44.0
margin_right = 504.0
margin_bottom = 79.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "Getting %s of the same tower allows you to 
sacrifice them and gain their combination effect."

[node name="TierApplyDescLabel" type="Label" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 616.0
margin_bottom = 120.0
size_flags_horizontal = 6
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "Combination effect applies the ingredient effect of the combined tower
 to all towers of their tier (%s) and below, without taking ingredient slots."

[node name="TierSelectionPanel" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 288.0
margin_top = 126.0
margin_right = 328.0
margin_bottom = 149.0
mouse_filter = 0
size_flags_horizontal = 6
custom_constants/margin_right = 20
custom_constants/margin_top = 15
custom_constants/margin_left = 20
custom_constants/margin_bottom = 8

[node name="SelectedTierDescLabel" type="Label" parent="VBoxContainer"]
margin_left = 140.0
margin_top = 155.0
margin_right = 476.0
margin_bottom = 171.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 4 )
text = "Tier %s towers benefit from these effects:"

[node name="TowerIconCollectionPanelForApplied" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 308.0
margin_top = 177.0
margin_right = 308.0
margin_bottom = 195.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/margin_bottom = 18

[node name="SelectedTierDescNotApplyLevel" type="Label" parent="VBoxContainer"]
margin_left = 112.0
margin_top = 201.0
margin_right = 504.0
margin_bottom = 217.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 4 )
text = "Tier %s towers DO NOT benefit from these effects:"

[node name="TowerIconCollectionPanelForNotApplied" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 308.0
margin_top = 223.0
margin_right = 308.0
margin_bottom = 223.0
size_flags_horizontal = 6
